# babydb

./: .gitignore  Cargo.toml  fails  tasks
dB_data/: sst7.sst
db_data/: sst10.sst  sst20.sst
doc/: levels.md  persistence.md  seqnum.md
src/: lib.rs
src/db/: keyspace_subset.rs  level_iter.rs  merging_iter.rs  metamorphic_test.rs  mod.rs  trace_test.rs
src/db/testdata/: l1  merge  metamorphic_1  metamorphic_2  metamorphic_3  overlap  scratch  t
src/encoding/: mod.rs
src/fs/: mod.rs
src/log/: file_log.rs  mock_log.rs  mod.rs
src/memtable/: mod.rs
src/memtable/testdata/: deletes  seqnum
src/root/: mod.rs
src/sst/: block.rs  mod.rs  reader.rs  writer.rs
src/sst/testdata/: simple  sst
src/testdata/: seqnum
